--- a/src/app/modules/control/batchdashboard/batchdashboard.component.html
+++ b/src/app/modules/control/batchdashboard/batchdashboard.component.html
@@ -1,5 +1,5 @@
 <mat-card>
-    <mat-card-title>Class Subject</mat-card-title>
+    <mat-card-title>Batches</mat-card-title>
     <mat-card-subtitle>&nbsp;</mat-card-subtitle>
     <mat-card-content>
         <mat-spinner *ngIf="loading" diameter="25" style="position:relative;margin-left: 50%;"></mat-spinner>
@@ -26,6 +26,31 @@
                 <mat-cell *matCellDef="let element">
                     <mat-checkbox (click)="$event.stopPropagation()" (change)="updateCurrentBatch(element,$event)" [checked]="element.CurrentBatch==1?true:false">
                     </mat-checkbox>
+                </mat-cell>
+            </ng-container>
+
+            <ng-container matColumnDef="StartDate">
+                <mat-header-cell *matHeaderCellDef> Start </mat-header-cell>
+                <mat-cell *matCellDef="let element">
+                    <mat-form-field appearance="outline" [style.width.px]="130">
+                        <mat-label>Start</mat-label>
+                        <input [(ngModel)]="element.StartDate" [(value)]="element.StartDate" matInput
+                            [matDatepicker]="StartDate" autocomplete="off">
+                        <mat-datepicker-toggle matSuffix [for]="StartDate"></mat-datepicker-toggle>
+                        <mat-datepicker #StartDate></mat-datepicker>
+                    </mat-form-field>
+                </mat-cell>
+            </ng-container>
+            <ng-container matColumnDef="EndDate">
+                <mat-header-cell *matHeaderCellDef> End </mat-header-cell>
+                <mat-cell *matCellDef="let element">
+                    <mat-form-field appearance="outline" [style.width.px]="130">
+                        <mat-label>End</mat-label>
+                        <input [(ngModel)]="element.EndDate" [(value)]="element.EndDate" matInput
+                            [matDatepicker]="EndDate" autocomplete="off">
+                        <mat-datepicker-toggle matSuffix [for]="EndDate"></mat-datepicker-toggle>
+                        <mat-datepicker #EndDate></mat-datepicker>
+                    </mat-form-field>
                 </mat-cell>
             </ng-container>
             <ng-container matColumnDef="Active">
