--- a/src/app/modules/control/variable-config/variable-config.component.html
+++ b/src/app/modules/control/variable-config/variable-config.component.html
@@ -65,7 +65,7 @@
                         {{element.VariableAmount}}
                     </mat-cell>
                 </ng-container>
-                <ng-container matColumnDef="VariableTypeId">
+                <!-- <ng-container matColumnDef="VariableTypeId">
                     <mat-header-cell *matHeaderCellDef mat-sort-header>Variable Type
                     </mat-header-cell>
                     <mat-cell *matCellDef="let element ">
@@ -76,7 +76,7 @@
                             </mat-select>
                         </mat-form-field>
                     </mat-cell>
-                </ng-container>
+                </ng-container> -->
                 <ng-container matColumnDef="DisplayOrder">
                     <mat-header-cell *matHeaderCellDef mat-sort-header>Display Order
                     </mat-header-cell>
