--- a/src/app/modules/student/studentfeepayment/addstudentfeepayment/addstudentfeepayment.component.html
+++ b/src/app/modules/student/studentfeepayment/addstudentfeepayment/addstudentfeepayment.component.html
@@ -8,10 +8,10 @@
         <div style="padding: 15px;" fxLayout="row wrap" fxLayoutGap="100px">
             <div style="width: 100%;">
                 <alert></alert>
-                <mat-tab-group>
+                <mat-tab-group [selectedIndex]="selectedIndex" (selectedIndexChange)="tabChange($event)">
                     <mat-tab>
                         <ng-template mat-tab-label>
-                            <mat-icon>note_add</mat-icon>Payments
+                            <mat-icon>payments</mat-icon>&nbsp;Payments
                         </ng-template>
                         <div fxLayout="row" fxLayoutAlign="start space-around">
                             <div style="width:50%">
@@ -19,7 +19,7 @@
                                     <ng-container matColumnDef="SlNo">
                                         <mat-header-cell *matHeaderCellDef> Sr.No. </mat-header-cell>
                                         <mat-cell *matCellDef="let element"> {{element.SlNo}} </mat-cell>
-                                    </ng-container>                                                                        
+                                    </ng-container>
                                     <ng-container matColumnDef="MonthName">
                                         <mat-header-cell *matHeaderCellDef> Month </mat-header-cell>
                                         <mat-cell *matCellDef="let element">
@@ -43,43 +43,19 @@
                                         <mat-cell *matCellDef="let element">
                                             {{element.Balance}}
                                         </mat-cell>
-                                    </ng-container>                                    
+                                    </ng-container>
                                     <ng-container matColumnDef="Action">
-                                        <mat-header-cell *matHeaderCellDef> </mat-header-cell>
+                                        <mat-header-cell *matHeaderCellDef>Select </mat-header-cell>
                                         <mat-cell *matCellDef="let element" fxLayoutAlign="space-between center"
                                             fxLayout="row">
                                             <mat-checkbox [disabled]="loading || element.Balance==0" mat-mini-fab
-                                                (change)="SelectRow(element,$event)">
+                                                (change)="SelectRow(element,$event)" [(checked)]="element.Action">
                                             </mat-checkbox>
-                                            <!-- <button [disabled]="loading" mat-mini-fab (click)="UpdateOrSave(element)">
-                                            <mat-icon matTooltip="save">save</mat-icon>
-                                        </button> -->
                                         </mat-cell>
                                     </ng-container>
-                                    <!-- <ng-container matColumnDef="expandedDetail">
-                                        <mat-cell *matCellDef="let detail">
-                                            <table *ngIf="detail.element.PaymentDetails.length>0">
-                                                <tr style="background-color: lightgray;">
-                                                    <td>Sl.No.</td>
-                                                    <td>Amount</td>
-                                                    <td>Date</td>
-                                                </tr>
-                                                <tr *ngFor="let item of detail.element.PaymentDetails;let i=index">
-                                                    <td>{{i+1}}</td>
-                                                    <td>{{item.PaymentAmt}}</td>
-                                                    <td>{{item.PaymentDate|date:'dd/MM/yyyy hh:mm'}}</td>
-                                                </tr>
-                                            </table>
-                                        </mat-cell>
-                                    </ng-container> -->
                                     <mat-header-row *matHeaderRowDef="displayedColumns"></mat-header-row>
                                     <mat-row *matRowDef="let row; columns: displayedColumns;let i=index" matRipple
                                         class="element-row" [class.expanded]="expandedElement == row"></mat-row>
-                                    <!-- <mat-row
-                                        *matRowDef="let row; columns: ['expandedDetail']; when: isExpansionDetailRow"
-                                        [@detailExpand]="row.element == expandedElement ? 'expanded' : 'collapsed'"
-                                        style="overflow: hidden">
-                                    </mat-row> -->
                                 </mat-table>
                             </div>
                             <div style="background-color: lightgray;width:1px">&nbsp;</div>
@@ -90,21 +66,24 @@
                                         <mat-cell *matCellDef="let element"> {{element.SlNo}} </mat-cell>
                                         <mat-footer-cell *matFooterCellDef></mat-footer-cell>
                                     </ng-container>
-                                    <ng-container matColumnDef="ClassFeeName">
+                                    <ng-container matColumnDef="FeeName">
                                         <mat-header-cell *matHeaderCellDef> Fee </mat-header-cell>
-                                        <mat-cell *matCellDef="let element"> {{element.ClassFeeName}} </mat-cell>
+                                        <mat-cell *matCellDef="let element"> {{element.FeeName}} </mat-cell>
                                         <mat-footer-cell *matFooterCellDef></mat-footer-cell>
                                     </ng-container>
-                                    <ng-container matColumnDef="PaymentAmt">
+                                    <ng-container matColumnDef="Amount">
                                         <mat-header-cell *matHeaderCellDef> Amount </mat-header-cell>
                                         <mat-cell *matCellDef="let element">
                                             <mat-form-field>
-                                                <input style="text-align: right" matInput type="number" max="100000"
-                                                    [(ngModel)]="element.PaymentAmt" [(value)]="element.PaymentAmt"
+                                                <input style="text-align: right" [disabled]="element.FeeName!='Admission'" matInput type="number" max="100000"
+                                                    [(ngModel)]="element.Amount" [(value)]="element.Amount"
                                                     autocomplete="Off">
                                             </mat-form-field>
                                         </mat-cell>
-                                        <mat-footer-cell *matFooterCellDef> Total: {{ calculateTotal() }}
+                                        <mat-footer-cell *matFooterCellDef fxLayout="row" fxLayoutAlign="space-between center">
+                                            <div>Balance: {{Balance}}
+                                            </div>
+                                            <div>Total: {{ calculateTotal() }}</div>
                                         </mat-footer-cell>
                                     </ng-container>
                                     <mat-header-row *matHeaderRowDef="billDisplayedColumns"></mat-header-row>
@@ -113,7 +92,7 @@
                                     <mat-footer-row class="sticky-footer" *matFooterRowDef="billDisplayedColumns">
                                     </mat-footer-row>
                                 </mat-table>
-                                <div fxLayout="row" fxLayoutAlign="end center">
+                                <div fxLayout="row" fxLayoutAlign="end center" style="padding: 15px;">
                                     <button [disabled]="loading || calculateTotal()==0" matTooltip="pay" mat-mini-fab
                                         (click)="billpayment()">
                                         <mat-icon>payments</mat-icon>
@@ -124,9 +103,9 @@
                     </mat-tab>
                     <mat-tab>
                         <ng-template mat-tab-label>
-                            <mat-icon>note_add</mat-icon>Receipt
+                            <mat-icon>receipt</mat-icon>Receipt
                         </ng-template>
-                        <app-feereceipt></app-feereceipt>
+                        <app-feereceipt [BillDetail]="StudentBillList"></app-feereceipt>
                     </mat-tab>
                 </mat-tab-group>
             </div>
