--- a/src/app/modules/student/studentfeepayment/addstudentfeepayment/addstudentfeepayment.component.html
+++ b/src/app/modules/student/studentfeepayment/addstudentfeepayment/addstudentfeepayment.component.html
@@ -8,7 +8,7 @@
         <div style="padding: 15px;" fxLayout="row wrap" fxLayoutGap="100px">
             <div style="width: 100%;">
                 <alert></alert>
-                <mat-tab-group [selectedIndex]="selectedIndex" (selectedIndexChange)="tabChange($event)">
+                <mat-tab-group [selectedIndex]="selectedIndex" (selectedIndexChange)="tabChanged($event)">
                     <mat-tab>
                         <ng-template mat-tab-label>
                             <mat-icon>payments</mat-icon>&nbsp;Payments
@@ -105,7 +105,7 @@
                         <ng-template mat-tab-label>
                             <mat-icon>receipt</mat-icon>Receipt
                         </ng-template>
-                        <app-feereceipt [BillDetail]="StudentBillList"></app-feereceipt>
+                        <app-feereceipt [StudentClass]="studentInfoTodisplay" [BillDetail]="StudentBillList"></app-feereceipt>
                     </mat-tab>
                 </mat-tab-group>
             </div>
